frontend/test/should_pass/bitbucket5.grg
// test from bitbucket issue #5 by Peter Grüner

#using "bitbucket5.gm"

sequence TestSequence {
    nodes:set<Node> ;> { nodes = nodes(TestPackage::TestNode);}
}