frontend/test/should_fail/disallow_redeclaration_of_builtin_global_function_in_package.grg
package pack
{
	function nodes() : set<Node>
	{
		return(set<Node>{});
	}

	test t
	{
		if { nodes().empty(); }
	}
}
